# backupsage

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: ROADMAP.md  SECURITY.md
docs/adr/: 0001-output-safety-boundary.md  0002-master-signature-and-lossless-paths.md  README.md
docs/superpowers/plans/: 2026-07-18-backupsage-v1-dedup.md  2026-07-21-backupsage-roadmap-publication.md  2026-07-23-v1.0.1-safety-baseline.md
docs/superpowers/specs/: 2026-07-17-backupsage-v1-dedup-design.md  2026-07-21-backupsage-future-roadmap-design.md
src/: cli.rs  dedup.rs  exif_date.rs  format.rs  indexer.rs  lib.rs  main.rs  master.rs  outpath.rs  phash.rs  report.rs  searcher.rs  source_dir.rs  store.rs  textsafe.rs
tests/: cli.rs  dedup.rs  index_v3.rs  master.rs  roundtrip.rs  safety.rs
tests/common/: mod.rs
