[package]
name = "backupsage"
version = "0.2.0"
edition = "2021"
description = "Fast CLI to index and search text inside .tar, .tar.gz and .tar.zst backups without extracting them"
license = "MIT"

[lib]
name = "backupsage"
path = "src/lib.rs"

[[bin]]
name = "backupsage"
path = "src/main.rs"

[dependencies]
# CLI argument parsing via derive structs
clap = { version = "4.5", features = ["derive"] }

# SQLite bindings; "bundled" compiles SQLite from source so FTS5 is
# guaranteed regardless of the host's SQLite build
rusqlite = { version = "0.39", features = ["bundled"] }

# Streaming decompression — archives are never extracted to disk
zstd = "0.13"
flate2 = "1"

# TAR reading over any Read stream
tar = "0.4"

# Progress bar for the indexing phase
indicatif = { version = "0.17", features = ["improved_unicode"] }

# Ergonomic error handling with context strings
anyhow = "1"

# Table output for search/top results
comfy-table = "7"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
