[package]
name = "backupsage"
version = "1.0.0"
edition = "2021"
description = "Index, search and deduplicate files across .tar/.tar.gz/.tar.zst backups and directories without extracting them"
license = "MIT"

[lib]
name = "backupsage"
path = "src/lib.rs"

[[bin]]
name = "backupsage"
path = "src/main.rs"

[dependencies]
# CLI argument parsing via derive structs
clap = { version = "4.5", features = ["derive"] }

# SQLite bindings; "bundled" compiles SQLite from source so FTS5 is
# guaranteed regardless of the host's SQLite build
rusqlite = { version = "0.39", features = ["bundled"] }

# Streaming decompression — archives are never extracted to disk
zstd = "0.13"
flate2 = "1"

# TAR reading over any Read stream
tar = "0.4"

# Progress bar for the indexing phase
indicatif = { version = "0.17", features = ["improved_unicode"] }

# Ergonomic error handling with context strings
anyhow = "1"

# Table output for search/top results
comfy-table = "7"

# Full-content hashing (files + archive fingerprint); SIMD, multi-GB/s
blake3 = "1"

# Image decode for dimensions + perceptual hash input; Limits guard against
# decompression bombs found inside arbitrary archives
image = "0.25"

# Pure-Rust EXIF: JPEG, TIFF-based RAW, PNG, WebP and HEIF containers —
# HEIC capture dates without pixel decode (crate imports as `exif`)
kamadak-exif = "0.6"

# Directory sources walk
walkdir = "2"

# Stable JSON report contract (future web API)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 16-byte index_uuid minted per build
getrandom = "0.3"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
